--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -188,7 +188,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01'
-    implementation files("../../node_modules/react-native-tor/android/libs/sifir_android.aar")
     // gif
     implementation 'com.facebook.fresco:fresco:3.1.3'
     implementation 'com.facebook.fresco:animated-gif:3.1.3'
@@ -214,10 +213,14 @@ dependencies {
 
     // implementation 'info.guardianproject:tor-android:0.4.7.8'
     // implementation 'info.guardianproject:jtorctl:0.4.5.7'
+    implementation "io.matthewnelson.kotlin-components:kmp-tor:4.8.10-0-1.4.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.2"
 
     implementation('dev.doubledot.doki:library:0.0.1@aar') {
         transitive = true
     }
+    
 }
 
 configurations {
