iOS: automate versioning

--- a/ios/zeus.xcodeproj/xcshareddata/xcschemes/zeus.xcscheme
+++ b/ios/zeus.xcodeproj/xcshareddata/xcschemes/zeus.xcscheme
@@ -107,5 +107,15 @@
    <ArchiveAction
       buildConfiguration = "Release"
       revealArchiveInOrganizer = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;source $SRCROOT/versioning.sh&#10;"
+               shellToInvoke = "/bin/sh">
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
    </ArchiveAction>
 </Scheme>
