--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -20,3 +20,33 @@ jobs:
       run: npx envinfo
     - name: Build application
       run: chmod +x build.sh && bash ./build.sh --no-tty
+    - name: 'Archive arm64-v8a'
+      uses: actions/upload-artifact@v4
+      with:
+        name: arm64-v8a
+        path: android/app/build/outputs/apk/release/zeus-arm64-v8a.apk
+        retention-days: 5
+    - name: 'Archive armeabi-v7a'
+      uses: actions/upload-artifact@v4
+      with:
+        name: armeabi-v7a
+        path: android/app/build/outputs/apk/release/zeus-armeabi-v7a.apk
+        retention-days: 5
+    - name: 'Archive universal'
+      uses: actions/upload-artifact@v4
+      with:
+        name: universal
+        path: android/app/build/outputs/apk/release/zeus-universal.apk
+        retention-days: 5
+    - name: 'Archive x86'
+      uses: actions/upload-artifact@v4
+      with:
+        name: x86
+        path: android/app/build/outputs/apk/release/zeus-x86.apk
+        retention-days: 5
+    - name: 'Archive x86_64'
+      uses: actions/upload-artifact@v4
+      with:
+        name: x86_64
+        path: android/app/build/outputs/apk/release/zeus-x86_64.apk
+        retention-days: 5
