--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 95
-        versionName "0.9.2"
+        versionName "0.9.3-beta1"
         multiDexEnabled true
     }
     signingConfigs {
