--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -14,6 +14,9 @@ on:
 jobs:
   build-android:
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+      cancel-in-progress: true
     steps:
     - uses: actions/checkout@v4
     - name: Envinfo
