--- a/package.json
+++ b/package.json
@@ -18,13 +18,12 @@
     "start": "react-native start",
     "ra": "react-native run-android",
     "ri": "react-native run-ios",
-    "postinstall": "rn-nodeify --install --hack & node patches/patch-sifir_android.mjs & npx jetify & yarn run patch & yarn run fetch-libraries & pod-install",
+    "postinstall": "rn-nodeify --install --hack & node patches/patch-sifir_android.mjs & npx jetify & yarn run fetch-libraries & pod-install",
     "test": "jest",
     "tsc": "tsc",
     "lint": "eslint --ext .js,.ts,.tsx \"*.@(js|ts|tsx)\" . && yarn run test check-styles.test.ts --testPathIgnorePatterns=",
     "prettier": "prettier --check \"**/*.ts*\"",
     "prettier-write": "prettier --check --write \"**/*.ts*\"",
-    "patch": "git apply patches/rnqli-build.gradle.patch",
     "gen-proto": "pbjs -t static-module --keep-case -w es6 --force-long -o proto/lightning.js proto/*.proto proto/*/*.proto && pbts -o proto/lightning.d.ts proto/lightning.js",
     "gradlew": "cd android && ./gradlew",
     "android:clean": "yarn gradlew clean",
