--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
     "fetch-libraries": "bash fetch-libraries.sh"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "1.1.1",
     "@keystonehq/bc-ur-registry": "0.7.0",
     "@lightninglabs/lnc-core": "file:zeus_modules/@lightninglabs/lnc-core",
     "@ngraveio/bc-ur": "1.1.12",
+    "@nicolasflamel/secp256k1-zkp-react": "0.0.13",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "1.14.3",
     "@react-native-community/netinfo": "11.3.2",
@@ -52,6 +54,7 @@
     "bip39": "3.1.0",
     "bitcoinjs-lib": "6.1.5",
     "bolt11": "1.4.1",
+    "boltz-core": "2.1.3",
     "browserify-zlib": "0.1.4",
     "bs58check": "2.1.2",
     "buffer": "5.6.0",
@@ -62,6 +65,7 @@
     "dateformat": "5.0.3",
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
+    "ecpair": "3.0.0-rc.0",
     "elliptic": "6.6.0",
     "events": "1.1.1",
     "fast-sha256": "1.3.0",
