--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "fetch-libraries": "bash fetch-libraries.sh"
   },
   "dependencies": {
+    "@bitcoinerlab/secp256k1": "1.1.1",
     "@cashu/cashu-ts": "2.4.1",
     "@getalby/sdk": "3.9.0",
     "@keystonehq/bc-ur-registry": "0.7.0",
     "@lightninglabs/lnc-core": "file:zeus_modules/@lightninglabs/lnc-core",
     "@ngraveio/bc-ur": "1.1.12",
+    "@nicolasflamel/secp256k1-zkp-react": "0.0.13",
     "@noble/secp256k1": "1.6.3",
     "@nostr-dev-kit/ndk": "2.13.0-rc2",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -58,6 +60,7 @@
     "bitcoinjs-lib": "6.1.5",
     "bolt07": "1.9.4",
     "bolt11": "1.4.1",
+    "boltz-core": "2.1.3",
     "browserify-zlib": "0.1.4",
     "bs58check": "2.1.2",
     "buffer": "5.6.0",
@@ -68,7 +71,7 @@
     "dateformat": "5.0.3",
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
-    "ecpair": "2.0.1",
+    "ecpair": "3.0.0-rc.0",
     "elliptic": "6.6.1",
     "events": "1.1.1",
     "fast-crc32c": "2.0.0",
