refactor: creation date, validation of invoices

--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
     "@tradle/react-native-http": "2.0.1",
     "@types/dateformat": "5.0.0",
     "@types/humanize-duration": "3.27.1",
+    "@vulpemventures/secp256k1-zkp": "3.2.1",
     "aez": "1.0.1",
     "assert": "1.5.0",
+    "asyncstorage-down": "4.2.0",
     "bech32": "2.0.0",
     "bignumber.js": "9.0.2",
     "bip32": "3.0.1",
