--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
     "@keystonehq/bc-ur-registry": "0.7.0",
     "@lightninglabs/lnc-core": "file:zeus_modules/@lightninglabs/lnc-core",
     "@ngraveio/bc-ur": "1.1.12",
-    "@nicolasflamel/secp256k1-zkp-react": "0.0.13",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "1.14.3",
     "@react-native-community/netinfo": "11.3.2",
@@ -47,7 +46,9 @@
     "@tradle/react-native-http": "2.0.1",
     "@types/dateformat": "5.0.0",
     "@types/humanize-duration": "3.27.1",
+    "@vulpemventures/secp256k1-zkp": "3.2.1",
     "assert": "1.5.0",
+    "asyncstorage-down": "4.2.0",
     "bech32": "2.0.0",
     "big-integer": "1.6.52",
     "bignumber.js": "9.0.2",
