--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@keystonehq/bc-ur-registry": "0.7.0",
     "@lightninglabs/lnc-core": "file:zeus_modules/@lightninglabs/lnc-core",
     "@ngraveio/bc-ur": "1.1.12",
+    "@noble/secp256k1": "1.6.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "1.14.3",
     "@react-native-community/netinfo": "11.3.2",
@@ -49,6 +50,7 @@
     "bech32": "2.0.0",
     "big-integer": "1.6.52",
     "bignumber.js": "9.0.2",
+    "bip32": "3.0.1",
     "bip39": "3.1.0",
     "bitcoinjs-lib": "6.1.5",
     "bolt11": "1.4.1",
@@ -62,6 +64,7 @@
     "dateformat": "5.0.3",
     "dns.js": "1.0.1",
     "domain-browser": "1.2.0",
+    "ecpair": "2.0.1",
     "elliptic": "6.6.0",
     "events": "1.1.1",
     "fast-sha256": "1.3.0",
@@ -148,6 +151,7 @@
     "@react-native/babel-preset": "0.74.84",
     "@react-native/eslint-config": "0.74.84",
     "@react-native/metro-config": "0.74.84",
+    "@types/create-hash": "1.2.2",
     "@types/crypto-js": "4.1.1",
     "@types/jest": "29.5.12",
     "@types/lodash": "4.14.198",
