Channel: fix shortChannelId

--- a/package.json
+++ b/package.json
@@ -48,11 +48,11 @@
     "aez": "1.0.1",
     "assert": "1.5.0",
     "bech32": "2.0.0",
-    "big-integer": "1.6.52",
     "bignumber.js": "9.0.2",
     "bip32": "3.0.1",
     "bip39": "3.1.0",
     "bitcoinjs-lib": "6.1.5",
+    "bolt07": "1.9.4",
     "bolt11": "1.4.1",
     "browserify-zlib": "0.1.4",
     "bs58check": "2.1.2",
