--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
     "react-native-nfc-manager": "3.14.14",
     "react-native-notifications": "5.1.0",
     "react-native-os": "aprock/react-native-os#5/head",
+    "react-native-permissions": "5.2.3",
     "react-native-ping": "1.2.8",
     "react-native-print": "0.11.0",
     "react-native-qrcode-svg": "6.2.0",
