Bug report template: add NWC

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -48,6 +48,7 @@ body:
         - LND (REST)
         - LND (Lightning Node Connect)
         - Core Lightning (CLNRest)
+        - Nostr Wallet Connect
         - LndHub
         - DEPRECATED Core Lightning (c-lightning-REST)
         - DEPRECATED Core Lightning (Spark)
