added verify script

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ra": "react-native run-android",
     "ri": "react-native run-ios",
     "postinstall": "rn-nodeify --install --hack & node patches/patch-sifir_android.mjs & npx jetify & yarn run fetch-libraries & pod-install",
+    "verify": "concurrently \"yarn test\" \"yarn prettier\" \"yarn tsc\" \"yarn lint\"",
     "test": "jest",
     "tsc": "tsc",
     "lint": "eslint --ext .js,.ts,.tsx \"*.@(js|ts|tsx)\" . && yarn run test check-styles.test.ts --testPathIgnorePatterns=",
@@ -169,6 +170,7 @@
     "@typescript-eslint/parser": "6.13.1",
     "babel-jest": "29.7.0",
     "compressing": "1.10.0",
+    "concurrently": "9.1.2",
     "eslint": "8.45.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-import-resolver-typescript": "3.6.1",
