--- a/package.json
+++ b/package.json
@@ -123,6 +123,7 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-securerandom": "1.0.1",
+    "react-native-share": "12.0.3",
     "react-native-svg": "15.3.0",
     "react-native-svg-transformer": "1.3.0",
     "react-native-system-navigation-bar": "2.6.4",
@@ -131,6 +132,7 @@
     "react-native-udp": "4.1.7",
     "react-native-v8": "0.61.5-patch.4",
     "react-native-vector-icons": "7.1.0",
+    "react-native-view-shot": "4.0.3",
     "react-native-vision-camera": "4.3.2",
     "readable-stream": "1.0.33",
     "scrypt-js": "3.0.1",
