Share functionality fixes

--- a/ios/zeus/Info.plist
+++ b/ios/zeus/Info.plist
@@ -84,9 +84,9 @@
 	<key>NSMotionUsageDescription</key>
 	<string>Not Used</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Not Used</string>
+	<string>ZEUS would like permission to save QR codes to your photo library</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>ZEUS would like permission to use load QR codes from your photo library</string>
+	<string>ZEUS would like permission to load QR codes from your photo library</string>
 	<key>NSSpeechRecognitionUsageDescription</key>
 	<string>Not Used</string>
 	<key>UIAppFonts</key>
