--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme"
+      android:supportsRtl="true"
       android:networkSecurityConfig="@xml/network_security_config"
       android:largeHeap="true"
       android:extractNativeLibs="true">
