--- a/package.json
+++ b/package.json
@@ -90,21 +90,21 @@
     "protobufjs": "7.2.5",
     "punycode": "1.4.1",
     "querystring-es3": "0.2.1",
-    "react": "18.2.0",
-    "react-native": "0.74.2",
+    "react": "18.3.1",
+    "react-native": "0.76.5",
     "react-native-biometrics": "3.0.1",
-    "react-native-blob-util": "0.19.1",
+    "react-native-blob-util": "0.19.11",
     "react-native-circular-progress-indicator": "4.4.2",
     "react-native-crypto": "2.2.0",
-    "react-native-date-picker": "4.3.3",
+    "react-native-date-picker": "5.0.7",
     "react-native-device-info": "11.1.0",
     "react-native-draglist": "3.8.0",
     "react-native-elements": "3.4.3",
     "react-native-encrypted-storage": "4.0.3",
     "react-native-fs": "2.20.0",
-    "react-native-gesture-handler": "2.16.2",
+    "react-native-gesture-handler": "2.21.0",
     "react-native-get-random-values": "1.9.0",
-    "react-native-haptic-feedback": "2.2.0",
+    "react-native-haptic-feedback": "2.3.3",
     "react-native-hce": "0.1.2",
     "react-native-image-picker": "5.0.1",
     "react-native-keychain": "9.2.2",
@@ -117,23 +117,23 @@
     "react-native-print": "0.11.0",
     "react-native-qrcode-svg": "6.2.0",
     "react-native-randombytes": "3.5.3",
-    "react-native-reanimated": "3.12.0",
+    "react-native-reanimated": "3.16.1",
     "react-native-reanimated-carousel": "3.5.1",
     "react-native-restart": "0.0.27",
     "react-native-safe-area-context": "4.10.1",
-    "react-native-screens": "3.31.1",
+    "react-native-screens": "4.1.0",
     "react-native-securerandom": "1.0.1",
     "react-native-share": "12.0.3",
-    "react-native-svg": "15.3.0",
+    "react-native-svg": "15.8.0",
     "react-native-svg-transformer": "1.3.0",
     "react-native-system-navigation-bar": "2.6.4",
     "react-native-tcp": "aprock/react-native-tcp#be5f656",
-    "react-native-tor": "0.1.8",
+    "react-native-tor": "github:hsjoberg/react-native-tor#938d80f798111ee790033d8f46dfdc92795c4766",
     "react-native-udp": "4.1.7",
     "react-native-v8": "0.61.5-patch.4",
     "react-native-vector-icons": "7.1.0",
     "react-native-view-shot": "4.0.3",
-    "react-native-vision-camera": "4.3.2",
+    "react-native-vision-camera": "4.6.0",
     "readable-stream": "1.0.33",
     "scrypt-js": "3.0.1",
     "sha.js": "2.4.11",
@@ -147,16 +147,22 @@
     "vm-browserify": "0.0.4"
   },
   "devDependencies": {
-    "@babel/core": "7.22.15",
-    "@babel/plugin-proposal-decorators": "7.22.15",
+    "@babel/core": "7.25.2",
+    "@babel/plugin-proposal-decorators": "7.3.0",
     "@babel/plugin-proposal-nullish-coalescing-operator": "7.18.6",
     "@babel/plugin-proposal-optional-chaining": "7.21.0",
-    "@babel/preset-env": "7.22.15",
+    "@babel/plugin-transform-arrow-functions": "7.22.5",
+    "@babel/plugin-transform-shorthand-properties": "7.22.5",
+    "@babel/plugin-transform-template-literals": "7.22.5",
+    "@babel/preset-env": "7.25.3",
     "@babel/preset-typescript": "7.22.15",
-    "@babel/runtime": "7.22.15",
-    "@react-native/babel-preset": "0.74.84",
-    "@react-native/eslint-config": "0.74.84",
-    "@react-native/metro-config": "0.74.84",
+    "@babel/runtime": "7.25.0",
+    "@react-native-community/cli": "15.0.0-alpha.2",
+    "@react-native-community/cli-platform-android": "15.0.0-alpha.2",
+    "@react-native-community/cli-platform-ios": "15.0.0-alpha.2",
+    "@react-native/babel-preset": "0.76.2",
+    "@react-native/eslint-config": "0.76.2",
+    "@react-native/metro-config": "0.76.2",
     "@types/create-hash": "1.2.2",
     "@types/crypto-js": "4.1.1",
     "@types/jest": "29.5.12",
@@ -164,7 +170,7 @@
     "@types/object-hash": "1.3.4",
     "@types/pako": "2.0.3",
     "@types/react-native-vector-icons": "6.4.14",
-    "@types/react-test-renderer": "18.0.2",
+    "@types/react-test-renderer": "18.3.0",
     "@types/sha.js": "2.4.1",
     "@types/uuid": "9.0.7",
     "@typescript-eslint/eslint-plugin": "6.13.1",
@@ -186,7 +192,7 @@
     "prettier": "2.4.1",
     "protobufjs-cli": "1.1.1",
     "react-native-url-polyfill": "2.0.0",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "18.3.1",
     "rn-nodeify": "10.3.0",
     "typescript": "4.8.4"
   },
