--- a/package.json
+++ b/package.json
@@ -128,7 +128,7 @@
     "react-native-svg-transformer": "1.3.0",
     "react-native-system-navigation-bar": "2.6.4",
     "react-native-tcp": "aprock/react-native-tcp#be5f656",
-    "react-native-tor": "github:hsjoberg/react-native-tor#938d80f798111ee790033d8f46dfdc92795c4766",
+    "react-native-tor": "0.1.8",
     "react-native-udp": "4.1.7",
     "react-native-v8": "0.61.5-patch.4",
     "react-native-vector-icons": "7.1.0",
