--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 100
-        versionName "0.10.0-alpha7"
+        versionName "0.10.0-beta1"
         multiDexEnabled true
     }
     signingConfigs {
