--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -100,8 +100,8 @@ android {
         applicationId "app.zeusln.zeus"
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
-        versionCode 100
-        versionName "0.10.0-rc4"
+        versionCode 101
+        versionName "0.10.0"
         multiDexEnabled true
     }
     signingConfigs {
