--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 102
-        versionName "0.10.0"
+        versionName "0.10.1-alpha"
         multiDexEnabled true
     }
     signingConfigs {
