--- a/package.json
+++ b/package.json
@@ -136,6 +136,7 @@
     "react-native-view-shot": "4.0.3",
     "react-native-vision-camera": "4.3.2",
     "readable-stream": "1.0.33",
+    "rn-qr-generator": "1.4.3",
     "scrypt-js": "3.0.1",
     "sha.js": "2.4.11",
     "socket.io-client": "4.7.2",
