--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "@tradle/react-native-http": "2.0.1",
     "@types/dateformat": "5.0.0",
     "@types/humanize-duration": "3.27.1",
+    "aez": "1.0.1",
     "assert": "1.5.0",
     "asyncstorage-down": "4.2.0",
     "bech32": "2.0.0",
