--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "react-native-crypto": "2.2.0",
     "react-native-date-picker": "4.3.3",
     "react-native-device-info": "11.1.0",
+    "react-native-document-picker": "9.3.1",
     "react-native-draglist": "3.8.0",
     "react-native-elements": "3.4.3",
     "react-native-encrypted-storage": "4.0.3",
