--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@noble/secp256k1": "1.6.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-clipboard/clipboard": "1.14.3",
+    "@react-native-community/netinfo": "11.4.1",
     "@react-native-community/slider": "4.5.2",
     "@react-native-picker/picker": "2.6.1",
     "@react-navigation/bottom-tabs": "7.0.0-alpha.22",
