--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 104
-        versionName "0.10.2"
+        versionName "0.11.0-alpha1"
         multiDexEnabled true
     }
     signingConfigs {
