--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "start": "react-native start",
     "ra": "react-native run-android",
     "ri": "react-native run-ios",
-    "postinstall": "rn-nodeify --install --hack & node patches/patch-sifir_android.mjs & npx jetify & yarn run fetch-libraries & pod-install",
+    "postinstall": "rn-nodeify --install --hack & npx jetify & yarn run fetch-libraries & pod-install",
     "verify": "concurrently \"yarn test\" \"yarn prettier\" \"yarn tsc\" \"yarn lint\"",
     "test": "jest",
     "tsc": "tsc",
@@ -105,7 +105,7 @@
     "react-native-elements": "3.4.3",
     "react-native-encrypted-storage": "4.0.3",
     "react-native-fs": "2.20.0",
-    "react-native-gesture-handler": "2.16.2",
+    "react-native-gesture-handler": "2.25.0",
     "react-native-get-random-values": "1.9.0",
     "react-native-haptic-feedback": "2.2.0",
     "react-native-hce": "0.1.2",
