--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@react-navigation/native": "7.0.0-alpha.18",
     "@react-navigation/stack": "7.0.0-alpha.20",
     "@scure/base": "1.1.6",
+    "@scure/bip39": "1.6.0",
     "@tradle/react-native-http": "2.0.1",
     "@types/dateformat": "5.0.0",
     "@types/humanize-duration": "3.27.1",
