--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zeus",
-  "version": "0.11.0-alpha5",
+  "version": "0.11.0-beta1",
   "private": true,
   "jest": {
     "preset": "react-native",
