--- a/package.json
+++ b/package.json
@@ -28,9 +28,7 @@
     "gen-proto": "pbjs -t static-module --keep-case -w es6 --force-long -o proto/lightning.js proto/*.proto proto/*/*.proto && pbts -o proto/lightning.d.ts proto/lightning.js",
     "gradlew": "cd android && ./gradlew",
     "android:clean": "yarn gradlew clean",
-    "fetch-libraries": "bash fetch-libraries.sh",
-    "lint-fix": "eslint --ext .js,.ts,.tsx \"*.@(js|ts|tsx)\" . --fix",
-    "fix-all": "yarn prettier-write && yarn lint-fix"
+    "fetch-libraries": "bash fetch-libraries.sh"
   },
   "dependencies": {
     "@bitcoinerlab/secp256k1": "1.1.1",
