--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -101,7 +101,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 106
-        versionName "0.11.2-alpha4"
+        versionName "0.11.2-beta1"
         multiDexEnabled true
     }
     signingConfigs {
